[package]
name = "avatargen"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Generates random png avatars from seeds"
repository = "https://github.com/kreibaum/avatargen"
readme = "README.md"
exclude = [".vscode/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17.10"
rand = "0.8.5"
